<resources>
    <string name="app_name">MessengerFB</string>
    <string name="messenger">MESSENGER</string>
    <string name="your_email">Your email:</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Забыл пароль</string>
    <string name="register">Регистрация</string>
    <string name="login">Войти</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="logout">Logout</string>
    <string name="reset_link_send">Ссылка на сброс была успешно отправлена</string>
    <string name="enter_message">Введите сообщение</string>
</resources>